# MeetScribe

./: .gitignore  COMMERCIAL_LICENSE.md  DEPLOYMENT.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  __init__.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  gpu_client.py  interfaces.py  main.py  models.py  smart_plug.py
backend/app/core/: auth.py  llm.py  llm_observability.py  logging.py
backend/app/repositories/: meeting_repository.py
backend/app/routers/: jobs.py  meetings.py  segments.py  transcripts.py  upload.py
backend/app/schemas/: extraction.py  meeting.py
backend/app/services/: extraction_service.py  job_store.py  meeting_service.py
backend/app/transcription/: __init__.py  fallback.py  gpu_client.py  (+3 more)
chrome-extension/: manifest.json
chrome-extension/src/: api.js  audio.js  config.js  content.js  export.js  job-poller.js  main.css  main.html  main.js  offscreen.html  offscreen.js  options.html  popup.html  popup.js  service-worker.js  settings.js  state.js  ui.js
gpu-worker/: Dockerfile  __init__.py  transcribe.py  worker_server.py
gpu-worker/core/: audio.py  diarizer.py  domain.py  errors.py  logging.py  pipeline.py  transcriber.py
infra/server/: .env.example  docker-compose.yml
infra/worker/: .env.example  docker-compose.yml
tests/: conftest.py  extraction_test.py  integration_test.py  manual_smoke.py  meeting_service_test.py  smoke_test.py  test_auth.py  test_job_store.py  test_repository.py  test_routers.py  test_sprint2.py  test_sprint3.py  worker_concurrency_test.py
tests/api/: test_auth.py  test_routers.py
tests/contracts/: test_interfaces.py
tests/database/: test_migrations.py
tests/repositories/: test_meeting_repository.py
tests/services/: test_extraction_service.py  test_job_store.py  test_job_store_persistence.py  test_meeting_service_gpu.py  test_meeting_service_processing.py
tests/transcription/: test_gpu_client.py  test_gpu_waker.py  test_service.py
tests/worker/: test_error_classification.py
