[project]
name = "meetscribe"
version = "0.1.0"
description = "Self-hosted meeting transcription with speaker diarization"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.8",
    "faster-whisper>=1.2.1",
    "pyannote-audio>=3.3.0",
    "httpx>=0.28.1",
    "instructor>=1.14.5",
    "numpy>=2.4.2",
    "openai>=2.20.0",
    "paramiko>=4.0.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.16",
    "tinytuya>=1.17.4",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.0",
]

[project.scripts]
meetscribe-backend = "backend.app.main:main"
meetscribe-worker = "gpu_worker.transcribe:main"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # Line length handled by formatter
    "B008",   # Function call in default argument (FastAPI pattern)
    "B904",   # raise ... from err (too verbose for HTTP exceptions)
    "SIM115", # Context manager for open (not always applicable)
    "SIM117", # Nested with statements (readability preference)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
